added missing never tag for preserve_dap

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - set_fact:
     preserve_dap: true
-  tags: [ 'preserve_dap' ]
+  tags: [ 'never', 'preserve_dap' ]
 
 - name: template xml 
   template:
